--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,15 +1,15 @@
 {
   "name": "gateway",
   "version": "1.0.0",
-  "description": "API Gateway para la arquitectura de microservicios.",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node --watch server.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "http-proxy-middleware": "^3.0.0",
-    "cors": "^2.8.5"
+    "express-http-proxy": "^2.0.0"
   }
 }
